# LiDart

./: .gitattributes  .gitignore  Cargo.toml  index.mjs  jonsnotes.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
docs/: Common.tex
docs/Design/: README.md
docs/Design/MG/: Makefile
docs/Design/MIS/: Makefile
docs/Design/SystDesign/: SystDes.tex  references.bib
docs/DevelopmentPlan/: DevelopmentPlan.tex  Makefile  README.md
docs/DevelopmentPlan/SupportingDocs/: Gantt Chart.gantt  GitHub Branches.vsdx  GitHub Workflow.vsdx
docs/HazardAnalysis/: HazardAnalysis.tex  Makefile
docs/ProblemStatementAndGoals/: Makefile  ProblemStatement.tex
docs/Reflection/: Makefile
docs/SRS/: Makefile  README.md  SRS.tex  references.bib  specific-system-description.md
docs/UserGuide/: Makefile
docs/VnVPlan/: Makefile  VnVPlan.tex  references.bib
docs/VnVReport/: Makefile
src/: Bearing Holder.ipt  Bearing Holder.stl  Bearing size test.stl
src/POC/: GUI-HTML.html  index.html  local.js  serial_capstone.py
src/POC/motors/: motors.ino
src/april_tags/: Cargo.toml  april_tags.html
src/camera_calibration/: calibrate.py  mtx.txt
src/models/: Bearing Holder.ipt  MotorMount.ipt  collar.ipt  coupler.ipt  coupler.stl  hub.ipt  omniwheel.iam  roller_half.ipt  roller_half.stl  roller_shaft.ipt  wheel.ipt  wheel.stl
src/raspi/: Cargo.toml
src/raspi/assets/: GUI-HTML.html  imagetest.html  viddown.html  vidup.html
src/raspi/src/: defs.rs  drive.rs  main.rs  math.rs  video.rs
src/state_estimation_sim/: derivations.py  stateestimationsim.html
(+14 files in other folders)
