[package]
name = "raspi"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.3"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
futures = "0.3.25"
serialport = "4.2.0"
apriltag = { version = "0.3.1", features = ["full"] }
image = "0.24.5"
bytes = "1.3.0"